--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -9,7 +9,8 @@
     "submit": "제출",
     "loading": "로딩 중...",
     "error": "오류",
-    "success": "성공"
+    "success": "성공",
+    "general": "일반"
   },
   "chat": {
     "sendMessage": "메시지 보내기",
@@ -38,6 +39,14 @@
     "disableImageGeneration": "이미지 생성 비활성화",
     "selectImageProvider": "이미지 제공자 선택",
     "noImageProvidersAvailable": "사용 가능한 이미지 제공자가 없습니다"
+  },
+  "tools": {
+    "executing": "도구 실행 중...",
+    "executedSuccessfully": "도구 실행 완료",
+    "executionFailed": "도구 실행 실패",
+    "toolName": "도구 이름",
+    "result": "결과",
+    "error": "오류"
   },
   "translation": {
     "title": "번역",
@@ -117,8 +126,11 @@
   "mcpServer": {
     "title": "MCP 서버",
     "addServer": "서버 추가",
+    "editServer": "서버 편집",
     "serverName": "서버 이름",
     "serverNamePlaceholder": "서버 이름 입력",
+    "description": "설명",
+    "descriptionPlaceholder": "서버 설명 입력 (선택사항)",
     "transportType": "전송 유형",
     "serverURL": "서버 URL",
     "serverURLPlaceholder": "서버 URL 입력",
@@ -126,9 +138,25 @@
     "default": "기본값",
     "imageGeneration": "이미지 생성",
     "noServers": "구성된 MCP 서버가 없습니다",
-    "addServerPrompt": "'서버 추가' 버튼을 클릭하여 서버를 생성하세요",
+    "addServerPrompt": "'서버 추가' 버튼을 클릭하여 하나 생성하세요",
     "cannotEditDefault": "기본 서버는 편집할 수 없습니다",
-    "cannotDeleteDefault": "기본 서버는 삭제할 수 없습니다"
+    "cannotDeleteDefault": "기본 서버는 삭제할 수 없습니다",
+    "sseOption": "서버 전송 이벤트 (SSE)",
+    "stdioOption": "표준 입출력 (stdio)",
+    "streamableHttpOption": "스트리밍 가능한 HTTP",
+    "sseDisplay": "SSE",
+    "stdioDisplay": "STDIO",
+    "streamableHttpDisplay": "스트리밍 HTTP",
+    "connectionSettings": "연결 설정",
+    "command": "명령어",
+    "commandPlaceholder": "명령어 입력 (예: python, node)",
+    "args": "인수",
+    "argsPlaceholder": "한 줄에 하나의 인수",
+    "argsHelp": "각 인수를 별도의 줄에 입력하세요",
+    "env": "환경 변수 (JSON)",
+    "advancedSettings": "고급 설정",
+    "timeout": "타임아웃",
+    "seconds": "초"
   },
   "settings": {
     "language": "언어",
