--- a/src/locales/zh-CN/translation.json
+++ b/src/locales/zh-CN/translation.json
@@ -9,7 +9,8 @@
     "submit": "提交",
     "loading": "加载中...",
     "error": "错误",
-    "success": "成功"
+    "success": "成功",
+    "general": "常规"
   },
   "chat": {
     "sendMessage": "发送消息",
@@ -38,6 +39,14 @@
     "disableImageGeneration": "禁用图片生成",
     "selectImageProvider": "选择图片提供商",
     "noImageProvidersAvailable": "没有可用的图片提供商"
+  },
+  "tools": {
+    "executing": "正在执行工具...",
+    "executedSuccessfully": "工具执行完成",
+    "executionFailed": "工具执行失败",
+    "toolName": "工具名称",
+    "result": "结果",
+    "error": "错误"
   },
   "translation": {
     "title": "翻译",
@@ -117,18 +126,37 @@
   "mcpServer": {
     "title": "MCP 服务器",
     "addServer": "添加服务器",
+    "editServer": "编辑服务器",
     "serverName": "服务器名称",
     "serverNamePlaceholder": "输入服务器名称",
+    "description": "描述",
+    "descriptionPlaceholder": "输入服务器描述（可选）",
     "transportType": "传输类型",
     "serverURL": "服务器 URL",
     "serverURLPlaceholder": "输入服务器 URL",
-    "headers": "头信息 (JSON)",
+    "headers": "请求头 (JSON)",
     "default": "默认",
-    "imageGeneration": "图片生成",
-    "noServers": "尚未配置 MCP 服务器",
+    "imageGeneration": "图像生成",
+    "noServers": "未配置 MCP 服务器",
     "addServerPrompt": "点击\"添加服务器\"按钮创建一个",
     "cannotEditDefault": "无法编辑默认服务器",
-    "cannotDeleteDefault": "无法删除默认服务器"
+    "cannotDeleteDefault": "无法删除默认服务器",
+    "sseOption": "服务器发送事件 (SSE)",
+    "stdioOption": "标准输入/输出 (stdio)",
+    "streamableHttpOption": "可流式传输的 HTTP",
+    "sseDisplay": "SSE",
+    "stdioDisplay": "STDIO",
+    "streamableHttpDisplay": "流式 HTTP",
+    "connectionSettings": "连接设置",
+    "command": "命令",
+    "commandPlaceholder": "输入命令（例如：python, node）",
+    "args": "参数",
+    "argsPlaceholder": "每行一个参数",
+    "argsHelp": "每个参数单独一行输入",
+    "env": "环境变量 (JSON)",
+    "advancedSettings": "高级设置",
+    "timeout": "超时",
+    "seconds": "秒"
   },
   "settings": {
     "language": "语言",
@@ -173,7 +201,6 @@
     "webSearch_toggle_label": "启用网页搜索功能",
     "webSearch_description": "启用后，AI 可以搜索网页以提供更及时的信息。请注意，网页搜索目前仅支持 OpenAI 和 Gemini 模型。此外，启用网页搜索时，流式响应（文本逐步出现）将不可用。",
 
-    "general": "常规设置",
     "startup": "启动设置",
     "startWithSystem": "开机自启动",
     "startupToTray": "启动时最小化到托盘",
