--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -107,6 +107,7 @@
   "imageGeneration": {
     "title": "Generación de Imágenes",
     "provider": "Proveedor",
+    "settingsButton": "Configuraciones",
     "model": "Modelo",
     "imageSize": "Tamaño de Imagen",
     "generationCount": "Cantidad de Generaciones",
